examples/test/testpolicy5710.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5710
  namespace: namespace21
spec:
  podSelector:
    matchLabels:
      key5: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value10
          key8: value9
      podSelector:
        matchLabels:
          key10: value35
          key22: value35
          key4: value33
